# ptf-linpack

./: README.md
Docs/: acm_proc_article-sp-german.cls  acm_proc_article-sp.cls  seminar.tex
linpack/include/: Linpack.h
linpack/src/: .Linpack.cc.swp  Linpack.cc  Makefile.am
reportDraft/: seminar.aux  seminar.aux.make  seminar.auxbbl.make  seminar.auxtarget.make  seminar.blg  seminar.d  seminar.fls  seminar.tex
